--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -141,7 +141,7 @@
                         </a>
                     </li >
                     <li>
-                        <a _href="/admin/Order/keep_order_list?start={$mytime}">
+                        <a _href="/admin/Order/keep_order_list">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>持仓记录</cite>
                         </a>
