--- a/application/index/view/user/coin.html
+++ b/application/index/view/user/coin.html
@@ -203,7 +203,7 @@
                     {volist name="list" id="vo"  }
                     <tr>
                         <td>{$vo.apply_coin_name}</td>
-                        <td>{$vo.amount}</td>
+                        <td>{$vo.amount|number_format=###,2,'.',''}</td>
                     </tr>
                     {/volist}
 
