--- a/application/admin/view/order/order_list.html
+++ b/application/admin/view/order/order_list.html
@@ -102,18 +102,18 @@
                 <td>{$val['product_name']}</td>
                 <td>{$val['username']}</td>
                 <td>{$val['agent_name']}</td>
-                <td>{$val['money']}</td>
-                <td>{$val['buy_price']}</td>
-                <td>{$val['sell_price']}</td>
+                <td>{$val['money']|number_format=###,2,'.',''}</td>
+                <td>{$val['buy_price']|number_format=###,2,'.',''}</td>
+                <td>{$val['sell_price']|number_format=###,2,'.',''}</td>
                 {if ($val['direction'] eq 1)}
                 <td style="color: red;">买入</td>
                 {else/}
                 <td style="color: #008000;">卖出</td>
                 {/if}
                 {if ($val['profit'] >0)}
-                <td style="color: red;">{$val['profit']}</td>
+                <td style="color: red;">{$val['profit']|number_format=###,2,'.',''}</td>
                 {else/}
-                <td style="color: #008000;">{$val['profit']}</td>
+                <td style="color: #008000;">{$val['profit']|number_format=###,2,'.',''}</td>
                 {/if}
                 <td>{$val['add_time']}</td>
                 <td>{$val['update_time']}</td>
