--- a/application/index/view/trade/index.html
+++ b/application/index/view/trade/index.html
@@ -1075,9 +1075,14 @@
                 success:function(res){
                     layer.close(load);
                     if(res['status']==1){
-                        var tr='.'+oid;
-                        $(tr).remove();
-                        layer.msg(res['msg'],{icon:1,time:1000});
+
+                        layer.msg(res['msg'],{icon:1,time:1000},function(){
+                            var tr='.'+oid;
+                            $(tr).remove();
+                            $('#user_money').text(res.info.money);
+                            $('#user_real_money').text(res.info.real_money);
+                            $('#user_promise_money').text(res.info.promise_money);
+                        });
                     }else{
                         layer.msg(res['msg'],{icon: 2,time:1000});
                     }
@@ -1112,7 +1117,6 @@
             var amount=(now_price-buy_price)*contract*hand;
             var profit;
             var color;
-
             if(direction=='买入'){
                 if(now_price>buy_price){
                     profit=amount;
@@ -1259,7 +1263,28 @@
 //            console.log(evt.data);
                 var data=JSON.parse(evt.data);
                 if(data.status){
-
+                    //总后台强平
+                    if(data.status==101){
+                        layer.msg(data.msg,{icon: 2,time:3000},function(){
+                            var tr='.'+data.oid;
+                            $(tr).remove();
+//                            console.log(data.money);
+                            $('#user_money').text(data.money);
+                            $('#user_real_money').text(data.real_money);
+                            $('#user_promise_money').text(data.promise_money);
+                        });
+                    }
+                    //爆仓
+                    if(data.status==102){
+                        layer.msg(data.msg,{icon: 2,time:3000},function(){
+                            var tr='.'+data.oid;
+                            $(tr).remove();
+//                            console.log(data.money);
+                            $('#user_money').text(data.money);
+                            $('#user_real_money').text(data.real_money);
+                            $('#user_promise_money').text(data.promise_money);
+                        });
+                    }
                 }else{
                     var active_name = $('.list ul li.active').attr('data-product-abbreviation-name');
                     $.each(data,function(k,v){
@@ -1276,6 +1301,7 @@
                         var name=  "[data-product-abbreviation="+k+"]";
                         $(name).text(v['USD']);
                     });
+                    //计算持仓单输赢
                     count_profit();
                     layer.close(loadingSecond);
                 }
@@ -1348,7 +1374,7 @@
 		setCandlestick("BTC","day",30);//1.货币, 2. day,hour,minute 按天，小时，分钟. 3. 几条柱子
     });
     function keep_order_list_add(data){
-        console.log(data);
+//        console.log(data);
         var html='<tr class="'+data.oid+'">';
         html+='<td>'+data.order_sn+'</td>';
         html+='<td>'+data.product_name+'</td>';
@@ -1360,7 +1386,7 @@
         }else{
             html+='<td style="color: #008000;" class="direction">卖出</td>';
         }
-        html+='<td class="contract">'+math_floor(data.contract,1000)+'</td>';
+        html+='<td class="order_contract">'+math_floor(data.contract,1000)+'</td>';
         html+='<td class="hand">'+math_floor(data.hand)+'</td>';
         html+='<td class="profit">0.00</td>';
         html+='<td>'+data.add_time+'</td>';
