k线图失去焦点时，显示今天的值

--- a/application/index/view/trade/index.html
+++ b/application/index/view/trade/index.html
@@ -931,6 +931,14 @@
                 ]
             };
             myChart.setOption(option);
+			var zr = myChart.getZr();
+			zr.on('mouseout', function(){
+                    var valueToday = dataFromApi.Data[dataFromApi.Data.length - 1];
+                    $.each(valueToday,function(k,v){
+                        $("#price-k-" +k).text(v);
+                    });
+
+			});
 /*
             myChart.on('mouseover', function(param){
                 if(param.seriesType == "candlestick"){
