--- a/application/admin/view/user/user_edit.html
+++ b/application/admin/view/user/user_edit.html
@@ -143,7 +143,18 @@
                 选填
             </div>
         </div>
-
+        <div class="layui-form-item ">
+            <label for="lever" class="layui-form-label">
+                杠杆
+            </label>
+            <div class="layui-input-inline">
+                <input type="number" id="lever" name="lever"  lay-verify="number"
+                       autocomplete="off" class="layui-input" value="{$info.lever|number_format=###,2,'.',''}" >
+            </div>
+            <div class="layui-form-mid layui-word-aux">
+                默认1，建议 2 5 10 20 50 100
+            </div>
+        </div>
         <div class="layui-form-item ">
             <label class="layui-form-label">
                 注册IP
