--- a/application/index/view/trade/index.html
+++ b/application/index/view/trade/index.html
@@ -1261,6 +1261,7 @@
                         });
                     }
                 });
+//                console.log('已连接');
                 // Web Socket 已连接上，使用 send() 方法发送数据
                 //ws.send("发送数据");
             };
