--- a/application/index/view/coin/index.html
+++ b/application/index/view/coin/index.html
@@ -47,7 +47,7 @@
                     <a href="/index/Login/register" class="ma-l move"> 注册</a>
                 </li>
                 <li>
-                    <a href="/index/Login/login" class="darker" style="color:#4f94e7">登录</a>
+                    <a href="/index/Login/login" class="darker" style="color:#4f94e7">登录{$username}</a>
                 </li>
                 {else/}
                 <li>
