--- a/application/index/view/coin/index.html
+++ b/application/index/view/coin/index.html
@@ -41,13 +41,13 @@
             </ul>
             <ul class="user-status">
 
-                {if $username==0}
+                {if $username===0}
                 <li>
                     <i class="fa fa-user left move fz_16"></i>
                     <a href="/index/Login/register" class="ma-l move"> 注册</a>
                 </li>
                 <li>
-                    <a href="/index/Login/login" class="darker" style="color:#4f94e7">登录{$username}</a>
+                    <a href="/index/Login/login" class="darker" style="color:#4f94e7">登录</a>
                 </li>
                 {else/}
                 <li>
