--- a/application/index/view/notice/news.html
+++ b/application/index/view/notice/news.html
@@ -35,7 +35,7 @@
                 </li>
             </ul>
             <ul class="user-status">
-                {if $username==0}
+                {if $username===0}
                 <li>
                     <i class="fa fa-user left move fz_16"></i>
                     <a href="/index/Login/register" class="ma-l move"> 注册</a>
