--- a/application/index/view/login/register.html
+++ b/application/index/view/login/register.html
@@ -135,7 +135,7 @@
                     </div>
                     <div class="reg_input_box reg-fb" >
                         <div class="reg_title">邀请码：</div>
-                        <input type="number" name="invite_number" class="texts wh300 hg40" placeholder="选填"  style="width: 300px;"/>
+                        <input type="number" name="invite_number" value="{$invite_number}" class="texts wh300 hg40" placeholder="选填"  style="width: 300px;"/>
                     </div>
                     <div class="formbody">
                         <input type="submit" class="btns2 w300 hg40" lay-submit lay-filter="reg" value="立即注册">
