--- a/application/index/view/trade/index.html
+++ b/application/index/view/trade/index.html
@@ -371,6 +371,38 @@
         .models-content button{
             margin-top: 4px;
         }
+        .minutes {
+            width: 100%;
+            height: 40px;
+            position: absolute;
+            left: 0;
+            z-index: 9999;
+            top: 38px;
+            /*overflow-x: scroll;*/
+        }
+
+        .minutes ul:after {
+            content: "";
+            display: block;
+            clear: both;
+        }
+        .minutes ul li {
+            color: white;
+            display: inline;
+            float: left;
+            margin-right: 15px;
+            font-size: 14px;
+            line-height:40px;
+            height: 40px;
+            width: 4rem;
+            text-align: center;
+        }
+        .minutes ul li:hover{
+            background-color: darkblue;
+        }
+        .minutes ul li:last-child{
+            margin-right: 0;
+        }
     </style>
 </head>
 <body lang="zh-CN">
@@ -557,6 +589,17 @@
                                 </div>
                             </div>
                             <div data-v-c4371006="" id="box" class="kline">
+                                <div class="minutes">
+                                    <ul style="padding: 0 10px;">
+                                        <li>1分钟</li>
+                                        <li>5分钟</li>
+                                        <li>10分钟</li>
+                                        <li>30分钟</li>
+                                        <li>1小时</li>
+                                        <li>4小时</li>
+                                        <li>1天</li>
+                                    </ul>
+                                </div>
                                 <div data-v-c4371006="" id="tv_chart_container">
                                     <div id="main" style="width: 100%;height:500px;margin-top: 30px;"></div>
                                     <div data-v-c4371006="" class="itembtm clearfix" style="    position: absolute;
