--- a/application/index/view/trade/index.html
+++ b/application/index/view/trade/index.html
@@ -594,7 +594,6 @@
                                         <li>1分钟</li>
                                         <li>5分钟</li>
                                         <li>10分钟</li>
-                                        <li>30分钟</li>
                                         <li>1小时</li>
                                         <li>4小时</li>
                                         <li>1天</li>
@@ -815,8 +814,9 @@
             var option = {
                 backgroundColor: '#21202D',
                 legend: {
-                    data: ['日K', 'MA5', 'MA10', 'MA20', 'MA30'],
+                    data: ['K线','MA5', 'MA10', 'MA20', 'MA30'],
                     inactiveColor: '#777',
+					align: 'right',
                     textStyle: {
                         color: '#fff'
                     }
@@ -922,7 +922,7 @@
                             borderColor0: '#0CF49B'
                         }
                     }
-                },
+                }/*,
                     {
                         name: 'MA5',
                         type: 'line',
@@ -970,7 +970,7 @@
                                 width: 1
                             }
                         }
-                    }
+                    }*/
                 ]
             };
             myChart.setOption(option);
