--- a/application/index/view/trade/index.html
+++ b/application/index/view/trade/index.html
@@ -403,6 +403,9 @@
         .minutes ul li:last-child{
             margin-right: 0;
         }
+        .my_active{
+            background-color: darkblue;
+        }
     </style>
 </head>
 <body lang="zh-CN">
@@ -596,7 +599,7 @@
                                         <li>10分钟</li>
                                         <li>1小时</li>
                                         <li>4小时</li>
-                                        <li>1天</li>
+                                        <li class="my_active">1天</li>
                                     </ul>
                                 </div>
                                 <div data-v-c4371006="" id="tv_chart_container">
@@ -1017,6 +1020,9 @@
             }
         });
 	}
+    $('.minutes ul li').click(function(){
+        $(this).addClass('my_active').siblings().removeClass('my_active');
+    });
     var lever="{$user.lever}";
 
     $(".list ul li").click(function () {
